Improve mobile experience

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="scrolling menu">
                             <div class="item" data-value="en" data-english="English"><span class="description">English</span> English </div>
-                            <div class="item" data-value="es" data-english="Spanish"><span class="description">Español</span> Spanish </div>
+                            <!-- <div class="item" data-value="es" data-english="Spanish"><span class="description">Español</span> Spanish </div> -->
                             <div class="item" data-value="cn" data-english="Chinese"><span class="description">简体中文</span> Chinese </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="main">
             <aside>
-                <details open>
+                <details id="filters" open>
                     <summary>
                         <h2 data-localize="filters">Filters</h2>
                     </summary>
