Include current filters

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div class="container">
         <div id="search">
-            <input type="text" data-localize="search-placeholder" placeholder="Search for: INFO 200" id="searchBar" autofocus>
+            <input type="text" data-localize="search-placeholder" placeholder="Search for: INFO 200" id="searchBar" form="filters-form" autofocus>
             <button type="submit" id="searchButton" form="filters-form">
                 <i class="material-icons">search</i>
                 <span data-localize="search">Search</span>
