Show selected departments

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <span data-localize="search">Search</span>
             </button>
         </div>
+        <div id="dept-filters">
+            <span data-localize="dept">Colleges/Schools/Programs</span>
+            <div id="selected-departments">
+
+            </div>
+        </div>
         <div class="main">
             <aside>
                 <details id="filters">
